target/generated-sources/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDLParser.java
// $ANTLR 3.0.1 /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g 2019-01-16 13:06:35

package com.blackntan.dbmssync.antlr.oracle;
import com.blackntan.dbmssync.xsd.dbSchemaV1.*;
import java.math.BigInteger;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class TableDDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CREATETABLE", "ID", "POINT", "LPAREN", "COMMA", "RPAREN", "N", "UPPERLOWERQ", "ASTERISK", "PLUS", "MINUS", "NUMBER", "WHITESPACE", "'CONSTRAINT'", "'DEFAULT'", "'PRIMARY KEY'", "'UNIQUE'", "'USING INDEX'", "'TABLESPACE'", "'PCTFREE'", "'PCTUSED'", "'INITRANS'", "'MAXTRANS'", "'COMPUTE STATISTICS'", "'NOCOMPRESS'", "'LOGGING'", "'STORAGE'", "'INITIAL'", "'NEXT'", "'MINEXTENTS'", "'MAXEXTENTS'", "'PCTINCREASE'", "'FREELISTS'", "'FREELIST'", "'GROUPS'", "'BUFFER_POOL'", "'LOB'", "'STORE AS'", "'ENABLE STORAGE'", "'IN ROW'", "'CHUNK'", "'PCTVERSION'", "'NOCACHE'", "'FOREIGN KEY'", "'REFERENCES'", "'ON DELETE SET NULL'", "'NOT NULL'", "'ENABLE'", "'DISABLE'", "'VALIDATE'", "'NOVALIDATE'", "'VARCHAR'", "'VARCHAR2'", "'NUMBER'", "'FLOAT'", "'DATE'", "'INTEGER'", "'TIMESTAMP'", "'BLOB'", "'CLOB'", "'CHAR'", "'LONG'"
    };
    public static final int COMMA=8;
    public static final int NUMBER=15;
    public static final int LPAREN=7;
    public static final int ASTERISK=12;
    public static final int RPAREN=9;
    public static final int N=10;
    public static final int MINUS=14;
    public static final int CREATETABLE=4;
    public static final int UPPERLOWERQ=11;
    public static final int WHITESPACE=16;
    public static final int ID=5;
    public static final int POINT=6;
    public static final int EOF=-1;
    public static final int PLUS=13;

        public TableDDLParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g"; }



    // $ANTLR start createTable
    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:16:1: createTable returns [CtTable tb] : CREATETABLE (schema= ID POINT )? tablename= ID LPAREN columns ( ( COMMA pkA= primarykey ) | ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey ) )? ( COMMA 'CONSTRAINT' cnB= ID ( foreignkey )? ( uniquekey )? )* RPAREN ( pctfreeinfo )? ( tablespaceinfo )? ( lobinfo )* ;
    public final CtTable createTable() throws RecognitionException {
        CtTable tb = null;

        Token schema=null;
        Token tablename=null;
        Token cnA=null;
        Token cnB=null;
        CtPrimaryKey pkA = null;

        CtPrimaryKey pkB = null;

        ArrayList<CtColumn> columns1 = null;


        try {
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:17:5: ( CREATETABLE (schema= ID POINT )? tablename= ID LPAREN columns ( ( COMMA pkA= primarykey ) | ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey ) )? ( COMMA 'CONSTRAINT' cnB= ID ( foreignkey )? ( uniquekey )? )* RPAREN ( pctfreeinfo )? ( tablespaceinfo )? ( lobinfo )* )
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:17:9: CREATETABLE (schema= ID POINT )? tablename= ID LPAREN columns ( ( COMMA pkA= primarykey ) | ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey ) )? ( COMMA 'CONSTRAINT' cnB= ID ( foreignkey )? ( uniquekey )? )* RPAREN ( pctfreeinfo )? ( tablespaceinfo )? ( lobinfo )*
            {
            tb = CtTable.Factory.newInstance();CtColumns ctColumns = tb.addNewColumns();
            match(input,CREATETABLE,FOLLOW_CREATETABLE_in_createTable57); 
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:18:18: (schema= ID POINT )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==ID) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==POINT) ) {
                    alt1=1;
                }
            }
            switch (alt1) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:18:19: schema= ID POINT
                    {
                    schema=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_createTable62); 
                    match(input,POINT,FOLLOW_POINT_in_createTable64); 

                    }
                    break;

            }

            tb.setSchemaName(schema.getText());
            tablename=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_createTable78); 
            tb.setObjectName(tablename.getText());
            match(input,LPAREN,FOLLOW_LPAREN_in_createTable88); 
            pushFollow(FOLLOW_columns_in_createTable90);
            columns1=columns();
            _fsp--;

            CtColumn[] cbA = new CtColumn[columns1.size()];ctColumns.setColumnArray(columns1.toArray(cbA));
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:21:6: ( ( COMMA pkA= primarykey ) | ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey ) )?
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==COMMA) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==17) ) {
                    int LA2_3 = input.LA(3);

                    if ( (LA2_3==ID) ) {
                        int LA2_5 = input.LA(4);

                        if ( (LA2_5==19) ) {
                            alt2=2;
                        }
                    }
                }
                else if ( (LA2_1==19) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:22:7: ( COMMA pkA= primarykey )
                    {
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:22:7: ( COMMA pkA= primarykey )
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:22:8: COMMA pkA= primarykey
                    {
                    match(input,COMMA,FOLLOW_COMMA_in_createTable109); 
                    pushFollow(FOLLOW_primarykey_in_createTable113);
                    pkA=primarykey();
                    _fsp--;

                    tb.setPrimaryKey(pkA);

                    }


                    }
                    break;
                case 2 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:23:8: ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey )
                    {
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:23:8: ( COMMA 'CONSTRAINT' cnA= ID pkB= primarykey )
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:23:9: COMMA 'CONSTRAINT' cnA= ID pkB= primarykey
                    {
                    match(input,COMMA,FOLLOW_COMMA_in_createTable127); 
                    match(input,17,FOLLOW_17_in_createTable129); 
                    cnA=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_createTable133); 
                    pushFollow(FOLLOW_primarykey_in_createTable137);
                    pkB=primarykey();
                    _fsp--;


                    }

                    pkB.setObjectName(cnA.getText());tb.setPrimaryKey(pkB);

                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:6: ( COMMA 'CONSTRAINT' cnB= ID ( foreignkey )? ( uniquekey )? )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:7: COMMA 'CONSTRAINT' cnB= ID ( foreignkey )? ( uniquekey )?
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_createTable156); 
            	    match(input,17,FOLLOW_17_in_createTable158); 
            	    cnB=(Token)input.LT(1);
            	    match(input,ID,FOLLOW_ID_in_createTable162); 
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:33: ( foreignkey )?
            	    int alt3=2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0==47) ) {
            	        alt3=1;
            	    }
            	    switch (alt3) {
            	        case 1 :
            	            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:34: foreignkey
            	            {
            	            pushFollow(FOLLOW_foreignkey_in_createTable165);
            	            foreignkey();
            	            _fsp--;


            	            }
            	            break;

            	    }

            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:47: ( uniquekey )?
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==20) ) {
            	        alt4=1;
            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:25:48: uniquekey
            	            {
            	            pushFollow(FOLLOW_uniquekey_in_createTable170);
            	            uniquekey();
            	            _fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,RPAREN,FOLLOW_RPAREN_in_createTable182); 
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:13: ( pctfreeinfo )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==23) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:14: pctfreeinfo
                    {
                    pushFollow(FOLLOW_pctfreeinfo_in_createTable185);
                    pctfreeinfo();
                    _fsp--;


                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:28: ( tablespaceinfo )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==22) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:29: tablespaceinfo
                    {
                    pushFollow(FOLLOW_tablespaceinfo_in_createTable190);
                    tablespaceinfo();
                    _fsp--;


                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:46: ( lobinfo )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==40) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:26:47: lobinfo
            	    {
            	    pushFollow(FOLLOW_lobinfo_in_createTable195);
            	    lobinfo();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return tb;
    }
    // $ANTLR end createTable


    // $ANTLR start columns
    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:29:1: columns returns [ArrayList<CtColumn> cbAl] : ( ( COMMA )? column )* ;
    public final ArrayList<CtColumn> columns() throws RecognitionException {
        ArrayList<CtColumn> cbAl = null;

        CtColumn column2 = null;


        try {
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:30:5: ( ( ( COMMA )? column )* )
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:30:9: ( ( COMMA )? column )*
            {
            cbAl = new ArrayList<CtColumn>();
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:32:6: ( ( COMMA )? column )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==COMMA) ) {
                    int LA10_1 = input.LA(2);

                    if ( (LA10_1==ID) ) {
                        alt10=1;
                    }


                }
                else if ( (LA10_0==ID) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:32:7: ( COMMA )? column
            	    {
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:32:7: ( COMMA )?
            	    int alt9=2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0==COMMA) ) {
            	        alt9=1;
            	    }
            	    switch (alt9) {
            	        case 1 :
            	            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:32:8: COMMA
            	            {
            	            match(input,COMMA,FOLLOW_COMMA_in_columns235); 

            	            }
            	            break;

            	    }

            	    pushFollow(FOLLOW_column_in_columns239);
            	    column2=column();
            	    _fsp--;

            	    cbAl.add(column2);

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cbAl;
    }
    // $ANTLR end columns


    // $ANTLR start column
    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:35:1: column returns [CtColumn cb] : ID datatype ( 'DEFAULT' defaultvalue )? ( notnull )? ;
    public final CtColumn column() throws RecognitionException {
        CtColumn cb = null;

        Token ID3=null;
        CtDataType datatype4 = null;

        defaultvalue_return defaultvalue5 = null;


        try {
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:36:5: ( ID datatype ( 'DEFAULT' defaultvalue )? ( notnull )? )
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:36:9: ID datatype ( 'DEFAULT' defaultvalue )? ( notnull )?
            {
            cb = CtColumn.Factory.newInstance();
            ID3=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_column278); 
            cb.setObjectName(ID3.getText());
            pushFollow(FOLLOW_datatype_in_column282);
            datatype4=datatype();
            _fsp--;

            cb.setDataType(datatype4);
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:38:6: ( 'DEFAULT' defaultvalue )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==18) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:38:7: 'DEFAULT' defaultvalue
                    {
                    match(input,18,FOLLOW_18_in_column293); 
                    pushFollow(FOLLOW_defaultvalue_in_column295);
                    defaultvalue5=defaultvalue();
                    _fsp--;

                    cb.setDefaultValue(input.toString(defaultvalue5.start,defaultvalue5.stop));

                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:38:74: ( notnull )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==50) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:38:75: notnull
                    {
                    pushFollow(FOLLOW_notnull_in_column301);
                    notnull();
                    _fsp--;

                    cb.addNewNotNull();

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cb;
    }
    // $ANTLR end column


    // $ANTLR start primarykey
    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:41:1: primarykey returns [CtPrimaryKey pk] : 'PRIMARY KEY' LPAREN ( ( COMMA )? columnname= ID )+ RPAREN ( indexinfo )? ( pctfreeinfo )? ( tablespaceinfo )? ( constraintstate )? ;
    public final CtPrimaryKey primarykey() throws RecognitionException {
        CtPrimaryKey pk = null;

        Token columnname=null;

        try {
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:42:2: ( 'PRIMARY KEY' LPAREN ( ( COMMA )? columnname= ID )+ RPAREN ( indexinfo )? ( pctfreeinfo )? ( tablespaceinfo )? ( constraintstate )? )
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:42:4: 'PRIMARY KEY' LPAREN ( ( COMMA )? columnname= ID )+ RPAREN ( indexinfo )? ( pctfreeinfo )? ( tablespaceinfo )? ( constraintstate )?
            {
            pk = CtPrimaryKey.Factory.newInstance();
            match(input,19,FOLLOW_19_in_primarykey328); 
            match(input,LPAREN,FOLLOW_LPAREN_in_primarykey330); 
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:43:24: ( ( COMMA )? columnname= ID )+
            int cnt14=0;
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==ID||LA14_0==COMMA) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:43:25: ( COMMA )? columnname= ID
            	    {
            	    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:43:25: ( COMMA )?
            	    int alt13=2;
            	    int LA13_0 = input.LA(1);

            	    if ( (LA13_0==COMMA) ) {
            	        alt13=1;
            	    }
            	    switch (alt13) {
            	        case 1 :
            	            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:43:26: COMMA
            	            {
            	            match(input,COMMA,FOLLOW_COMMA_in_primarykey334); 

            	            }
            	            break;

            	    }

            	    columnname=(Token)input.LT(1);
            	    match(input,ID,FOLLOW_ID_in_primarykey340); 
            	    pk.addNewColumnName().setStringValue(columnname.getText());

            	    }
            	    break;

            	default :
            	    if ( cnt14 >= 1 ) break loop14;
                        EarlyExitException eee =
                            new EarlyExitException(14, input);
                        throw eee;
                }
                cnt14++;
            } while (true);

            match(input,RPAREN,FOLLOW_RPAREN_in_primarykey349); 
            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:10: ( indexinfo )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==21) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:11: indexinfo
                    {
                    pushFollow(FOLLOW_indexinfo_in_primarykey352);
                    indexinfo();
                    _fsp--;


                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:23: ( pctfreeinfo )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==23) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:24: pctfreeinfo
                    {
                    pushFollow(FOLLOW_pctfreeinfo_in_primarykey357);
                    pctfreeinfo();
                    _fsp--;


                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:38: ( tablespaceinfo )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==22) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:39: tablespaceinfo
                    {
                    pushFollow(FOLLOW_tablespaceinfo_in_primarykey362);
                    tablespaceinfo();
                    _fsp--;


                    }
                    break;

            }

            // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:56: ( constraintstate )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( ((LA18_0>=51 && LA18_0<=54)) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:44:57: constraintstate
                    {
                    pushFollow(FOLLOW_constraintstate_in_primarykey367);
                    constraintstate();
                    _fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return pk;
    }
    // $ANTLR end primarykey


    // $ANTLR start uniquekey
    // /Users/jcolson/src/personal/dbmssync/src/main/antlr/com/blackntan/dbmssync/antlr/oracle/TableDDL.g:47:1: uniquekey : 'UNIQUE' LPAREN columnname= ID ( COMMA columnname2= ID )* RPAREN ( indexinfo )? ( tablespaceinfo )? ( constraintstate )? ;
    public final void uniquekey() throws RecognitionException {
        Token columnname=null;
        Token columnname2=null;
